samples/negative/03_wrong_arg_count.pas
program n03;
procedure P(a: integer);
begin
end;
begin
  P(1, 2)
end.
